--- a/style.css
+++ b/style.css
@@ -4,10 +4,7 @@
 }
 
 .login {
-    background: rgb(69, 77, 94);
-    height: 100vh;
-    width: 100%;
-    background: rgb(69, 69, 94);
+    background: rgb(0 10 35);
     height: 100vh;
     width: 100%;
     display: flex;
@@ -16,10 +13,7 @@
 }
 
 .login-cont {
-    background: rgba(62, 96, 190, 0.753);
-    height: 460px;
-    width: 420px;
-    background: rgb(78, 73, 146);
+    background: whitesmoke;
     height: 460px;
     width: 420px;
 
@@ -67,7 +61,6 @@
     display: block;
     font-size: 20px;
     border-radius: 5px;
-    border: solid 1px rgb(5, 38, 102);
     border: solid 1px #15053f;
     margin: 20px;
     padding-left: 10px;
@@ -95,14 +88,14 @@
 }
 
 .home-nav {
-    background: rgb(5, 38, 102);
-    background: #260f61;
+    background: rgb(0 10 35);
     height: 50px;
     display: flex;
     align-items: center;
+    border: solid 1px black;
 }
 
-.home-img {
+.home-logo {
     height: 35px;
     width: 35px;
     margin: 0 17px 0 17px;
@@ -114,39 +107,78 @@
 }
 
 .home-content {
-    background: skyblue;
-    height: 200vh;
+    background: rgb(0, 29, 104);
+    height: 370vh;
     width: 100%;
 }
 
 .home-content-div {
     background: whitesmoke;
-    height: 700px;
+    height: 2450px;
     width: 1100px;
     margin: auto;
-    padding: 20px;
+    padding: 30px;
+}
+
+.home-img {
+    height: 400px;
+    width: 800px;
+    display: block;
+    margin: 30px auto 80px;
+}
+
+.home-title {
+    color: rgb(1, 22, 69);
+    font-size: 50px;
+    text-align: center;
+    margin: 20px 0 50px;
+}
+
+.home-subtitle {
+    color: rgb(1, 22, 69);
+    font-size: 45px;
+    margin: 50px 0 0;
+}
+
+.home-subtitle-types {
+    color: rgb(1, 22, 69);
+    font-size: 30px;
+    margin: 50px 0 20px 0;
 }
 
 .home-texto {
-    font-size: 20px;
+    font-size: 19px;
     color: black;
-    margin: 20px;
+    margin: 10px;
+    font-family: sans-serif;
+}
+
+.home-video {
+    height: 500px;
+    width: 900px;
+    display: block;
+    margin: 30px auto 30px;
 }
 
 .home-footer {
-    background: rgb(5, 38, 102);
+    background: rgb(0 10 35);
     color: white;
     height: 100px;
 
     display: flex;
     align-items: center;
     justify-content: center;
-    flex-direction: column;
+    flex-direction: column-reverse;
     position: relative;
     bottom: 0;
+    border: solid 1px black;
 }
 
 .home-nav-link {
     margin: 5px;
     color: rgb(188, 180, 238);
+}
+
+.home-footer-texto {
+    margin: 2px;
 }
